[package]
name = "pre_rust"
version = "0.1.0"
authors = ["KaitoNiinomi <kaito.niinomi@harvestx.jp>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pre_rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []


[dependencies]
esp-hal = { version = "0.14.0", features = ["esp32"] }
esp-backtrace = { version = "0.9.0", features = ["esp32"] }
esp-println = { version = "0.7.0", features = ["esp32"] }

[build-dependencies]
embuild = "0.33"
